objects/Migration_Source__c.object
<CustomObject>
    <description>Tracks information about an object&apos;s association with its origin in Base CRM</description>
    <fields>
        <fullName>Base_Contact_ID__c</fullName>
        <description>Indicates that this object was related to the specified Contact in Base</description>
        <label>Base Contact ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Created_At__c</fullName>
        <description>Base Creation time for this object</description>
        <label>Base Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Base_Creator_ID__c</fullName>
        <description>UserID of the Base user that created this object</description>
        <label>Base Creator ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Deal_ID__c</fullName>
        <description>Indicates that this object was related to the specified Deal in Base</description>
        <label>Base Deal ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Note_ID__c</fullName>
        <description>Indicates that this object was related to the specified Note in Base</description>
        <label>Base Note ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Object_URL__c</fullName>
        <description>URL to the original object</description>
        <label>Base Object URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Base_Owner_ID__c</fullName>
        <description>UserID in Base that owns this object</description>
        <label>Base Owner ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Stage_Change_ID__c</fullName>
        <label>Base Stage Change ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Task_ID__c</fullName>
        <description>Indicates that this object was related to the specified Task in Base</description>
        <label>Base Task ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Updated_At__c</fullName>
        <description>Base Update time for this object</description>
        <label>Base Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Base_User_ID__c</fullName>
        <description>Indicates that this object was related to the specified User in Base</description>
        <label>Base User ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migration ID</label>
        <referenceTo>Migration__c</referenceTo>
        <relationshipLabel>Migration Sources</relationshipLabel>
        <relationshipName>Migration_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Migration Source</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Base_Contact_ID__c</columns>
        <columns>Base_Deal_ID__c</columns>
        <columns>Base_Note_ID__c</columns>
        <columns>Base_Task_ID__c</columns>
        <columns>Base_User_ID__c</columns>
        <columns>Base_Object_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Migration Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>